--- a/deploy.yaml
+++ b/deploy.yaml
@@ -16,6 +16,6 @@ spec:
     spec:
       containers:
         - name: flask
-          image: sukanya996/bule-green:green-46
+          image: sukanya996/web:05
           ports:
             - containerPort: 5000
