--- a/deploy.yaml
+++ b/deploy.yaml
@@ -19,3 +19,13 @@ spec:
           image: sukanya996/web:05
           ports:
             - containerPort: 5000
+         resources:
+           requests:
+             cpu: "0.5"
+             memory: "100Mi"
+             ephemeral-storage: "2Gi"
+         limits:
+           cpu: "1"
+           memory: "200Mi"
+           ephemeral-storage: "4Gi"
+
