--- a/green.yaml
+++ b/green.yaml
@@ -15,6 +15,6 @@ spec:
       containers:
       - name: flask
       #  image: sukanya996/blue:green
-        image: sukanya996/bule-green:green-46  # Use Harness variable if needed
+        image: sukanya996/image:1  # Use Harness variable if needed
         ports:
         - containerPort: 5000
