--- a/green.yaml
+++ b/green.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: flask
-      #  image: sukanya996/blue:green
-        image: sukanya996/image:1  # Use Harness variable if needed
+        image: sukanya996/blue:green:green-47
+        #image: sukanya996/image:1  # Use Harness variable if needed
         ports:
         - containerPort: 5000
