--- a/green.yaml
+++ b/green.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: flask
-        #image: sukanya996/bule-green:green-46
-        image: sukanya996/web:05  # Use Harness variable if needed
+        image: sukanya996/bule-green:green-46
+        #image: sukanya996/web:05  # Use Harness variable if needed
         ports:
         - containerPort: 5000
